fix(popover): resolve z-index issues by using css `isolation`
fix: Lundalogik/lime-elements#1864

--- a/src/components/popover-surface/popover-surface.scss
+++ b/src/components/popover-surface/popover-surface.scss
@@ -1,6 +1,9 @@
-@use '../../style/internal/z-index';
 @use '../../style/functions';
 @use '../../style/mixins';
+
+:host(limel-popover-surface) {
+    isolation: isolate;
+}
 
 .limel-popover-surface {
     position: relative;
@@ -30,7 +33,7 @@
         right: 0;
         bottom: 0;
         left: 0;
-        z-index: z-index.$popover-before;
+        z-index: -1;
 
         opacity: 0.75;
 
