--- a/src/style/internal/z-index.scss
+++ b/src/style/internal/z-index.scss
@@ -8,6 +8,5 @@ $input-field--mdc-text-field__input--readonly: 1 !default;
 $tab-bar--active-tab: 2 !default;
 $table--has-interactive-rows--selectable-row--hover: 2 !default;
 $table--limel-table--row-selector: 1 !default;
-$popover-before: -1 !default;
 $button-group-radio-button-keyboard-focused: 1 !default;
 $limel-circular-progress-value: 1 !default;
